# Nexus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  delete_me.usda  imgui.ini  package.xml  temp.usdc  temp_after.usdc  tmp.py
.github/: FUNDING.yml
OLD/: app.hpp  main.cpp
OLD/bridge/: node.hpp
OLD/scene/: manager.hpp  permit.hpp  robot.cpp  robot.hpp
OLD/view/: filedialog.cpp  filedialog.hpp  parameter.hpp  render.cpp  render.hpp  window.cpp  window.hpp
assets/: imgui.ini  r2d2.usdc  temp.usdc
assets/franka/: franka.urdf
docs/: bugs.md  notes.md  todo.md
include/digital_twin/: base.hpp  external.hpp  log.hpp  plugin.hpp
include/digital_twin/plugin/: manager.hpp  module.hpp
include/dt/: window.hpp
include/dt/bridge/: bridge.hpp
include/dt/scene/: loan.hpp  manager.hpp  view.hpp
include/dt/view/: camera.hpp  window.hpp
issues/: dome_light_texture.md
scripts/: build.bat  clean.bat  configure.bat  run.bat
src/: main.cpp  scene.cpp  window.cpp
src/dt/: app.cpp  app.hpp  base.hpp  exception.h  logging.h  types.h  util.hpp  utility.h
src/dt/api/: api.h
src/dt/api/gui/: filedialog.h  panel.h
src/dt/app/: app.cpp  application.cpp  application.h
src/dt/bridge/: node.cpp  node.hpp
src/dt/core/: filedialog.cpp  filedialog.h  permit.h  window.cpp  window.h  window.old..cpp  window.old.h  window_theme.cpp  window_theme.h  world.cpp  world.h
src/dt/event/: client.h  context_change_event.h  event.h  keyboard_event.h  mouse_event.h  scene_reset_event.h  viewport_capture_event.h
src/dt/gui/: browser.cpp  browser.h  file_dialog.h  filedialog.h  logs.cpp  logs.h  render.cpp  render.h  robot.h  theme.h  window.cpp  window.h
src/dt/gui/sub/: controller.cpp  controller.h  filedialog.h  parameter.cpp  parameter.h  render.cpp  render.h
src/dt/plugin/: manager.cpp  module.cpp
src/dt/render/: controller.cpp  controller.h  parameter.cpp  parameter.h  render.cpp  render.h
src/dt/scene/: manager.hpp  permit.hpp  robot.cpp  robot.hpp
src/dt/ui/: log_history.h  log_output.h  menu_bar.h  property.cpp  property.h  scene_hierarchy.cpp  scene_hierarchy.h  usd_viewport.cpp  usd_viewport.h  viewports.cpp  viewports.h
src/dt/usd/: permit.h  robot.cpp  robot.h  world.cpp  world.h
src/dt/view/: camera.cpp  camera.hpp  controller.hpp  filedialog.cpp  filedialog.hpp  framestack.hpp  layer.hpp  parameter.hpp  render.cpp  render.hpp  rendergroup.hpp  window.cpp  window.hpp
src/nexus/: exception.h  logging.h  pch.h  types.h  utility.h
src/nexus/app/: application.cpp  application.h
src/nexus/core/: sync.h  world.cpp  world.h
src/nexus/entity/: entity.h  robot.cpp  robot.h
src/nexus/entity - OLD/: entity.h  node.cpp  node.hpp  robot.cpp  robot.h
src/nexus/event/: client.h  context_change_event.h  event.h  event_client.h  keyboard_event.h  mouse_event.h  scene_reset_event.h  viewport_capture_event.h
src/nexus/render/: controller.cpp  controller.h  parameter.h  render.cpp  render.h
src/nexus/view/: filedialog.h  window.cpp  window.h  window_theme.cpp  window_theme.h
src/nexus/view/panel/: log_history.h  menu_bar.h  multi_viewport.cpp  multi_viewport.h  prim_property.cpp  prim_property.h  property.cpp  property.h  scene_hierarchy.cpp  scene_hierarchy.h  viewports.cpp  viewports.h
